public/submission/Logs/test-08-06/[1][192881609][test-08-06][CE140237][A].c.log
Compile Error
[1][192881609][test-08-06][CE140237][A].c:1:1: error: unknown type name 'Nguyen'
 Nguyen Thanh Nhan
 ^~~~~~
[1][192881609][test-08-06][CE140237][A].c:1:14: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'Nhan'
 Nguyen Thanh Nhan
              ^~~~
